<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/conversation_with_relatives"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple_700" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans"
        android:padding="10dp"
        android:text="@string/shashi_are_you_thinking_of_following_your_passion"
        android:textColor="#181818"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:text="@string/later"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2.5dp"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2.5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="12dp" />

    </LinearLayout>

</LinearLayout>